# BrainFuckComp

./: .gitignore  BrainFuck.cpp  BrainFuck.hpp  CMakeLists.txt  Interpreter.hpp  Makefile  README.md  interpreter.cpp  utils.cpp  utils.h
.github/workflows/: ci.yml
docs/: IDEA.md
include/: BrainFuck.hpp  Interpreter.hpp  JIT.hpp
src/: BrainFuck.cpp  Interpreter.cpp  JIT.cpp  Runner.cpp
tests/asm/: lookup.txt  opcode_lookup  opcode_lookup.s
tests/cases/: bubblesort.bf
